added the next section (ingredients) and got it set up. Also learned that a great fix for the responsive layout was to remove the fixed height. Gonna do that later

--- a/index.html
+++ b/index.html
@@ -48,14 +48,28 @@
                         make us hard to resist!<br>
                         Stop in today and check us out!
                     </p>
-                    <img src="Assets/Img/cook.png" alt="Cooking food">
+                    <img src="Assets/Img/cook.png" alt="Cooking food" class="foodimg">
                 </div>
                 <div class="about-img-container">
                     <img src="/Assets/Img/dish.png">
                 </div>
             </div>
         </section>
-        <section id="ingredients"></section>
+        <section id="ingredients">
+            <div class="ingredients-box">
+                <h2 class="ingredients-header">Fine ingredients</h2>
+                <img src="Assets/Img/Divider_light.png">
+                <p>If you’ve been to one of our restaurants, you’ve seen – and<br> tasted – what keeps our customers coming back for more.<br> Perfect materials and freshly baked food, delicious Lambda<br> cakes, muffins, and gourmet coffees make us hard to resist!<br> Stop in today and check us out!
+                </p>
+                <div class="ingredients-imgbox">
+                    <ul class="ingredients-list">
+                        <li class="ingredient-img"><img src="/Assets/Img/grain_ingredients.png"></li>
+                        <li class="ingredient-img"><img src="/Assets/Img/paprika_ingredients.png"></li>
+                        <li class="ingredient-img"><img src="/Assets/Img/bread_ingredients.png"></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section id="menu"></section>
         <section id="reviews"></section>
         <section id="reservations"></section>
