--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <li><a class="nav-link" href="#promo">Home</a></li>
                     <li><a class="nav-link" href="#about">About</a></li>
                     <li><a class="nav-link" href="#ingredients">Ingredients</a></li>
-                    <li><a class="nav-link" href="#menu">Menu</a></li>                        <li><a class="nav-link" href="#reviews">Reviews</a></li>
+                    <li><a class="nav-link" href="#menu">Menu</a></li>                        
+                    <li><a class="nav-link" href="#reviews">Reviews</a></li>
                     <li><a class="nav-link" href="#reservations">Reservations</a></li>
                     <li><a href="http://twitter.com"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="http://youtube.com"><i class="fab fa-youtube"></i></a></li>
@@ -70,7 +71,114 @@
                 </div>
             </div>
         </section>
-        <section id="menu"></section>
+        <section id="menu">
+            <div class="menucard-container">
+                <div class="menu-left">
+                    <div class="menu-outer">
+                        <!-- APPETISERS -->
+                        <h1 class="menucard-heading">Appetisers</h1>
+                        <img src="/Assets/Img/Divider.png">
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">$3.99</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Aubergine Salad</p>
+                                <p class="dish-price">$5.50</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">$5.25</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <!-- SALADS -->
+                        <h1 class="menucard-heading">Salads</h1>
+                        <img src="/Assets/Img/Divider.png">
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box special">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-right">
+                    <div class="menu-outer">
+                        <!-- STARTERS -->
+                        <h1 class="menucard-heading">Starters</h1>
+                        <img src="/Assets/Img/Divider.png">
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">$3.99</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Aubergine Salad</p>
+                                <p class="dish-price">$5.50</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <!-- SALADS -->
+                        <h1 class="menucard-heading">Salads</h1>
+                        <img src="/Assets/Img/Divider.png">
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box special">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-price">2222</p>
+                            </div>
+                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="reviews"></section>
         <section id="reservations"></section>
     </div>
