Finished the menucard section and review section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="menu-outer">
                         <!-- APPETISERS -->
                         <h1 class="menucard-heading">Appetisers</h1>
-                        <img src="/Assets/Img/Divider.png">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
                         <div class="menu-box">
                             <div class="dish">
                                 <p class="dish-name">Tzatsiki</p>
@@ -90,36 +90,41 @@
                                 <p class="dish-name">Aubergine Salad</p>
                                 <p class="dish-price">$5.50</p>
                             </div>
-                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            <p class="dish-description">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
                         </div>
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-name">Aubergine Salad</p>
                                 <p class="dish-price">$5.25</p>
                             </div>
-                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            <p class="dish-description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
                         </div>
                         <!-- SALADS -->
                         <h1 class="menucard-heading">Salads</h1>
-                        <img src="/Assets/Img/Divider.png">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Olive Special</p>
+                                <p class="dish-price">$5.99</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
+                            <div class="menu-box special-box">
+                                <div class="dish">
+                                   <p class="special-prize">Special</p>
+                                </div>   
+                            </div>
                         <div class="menu-box special">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Greek Salad</p>
+                                <p class="dish-price">$5.50</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Gusto Salad</p>
+                                <p class="dish-price">$5.25</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
@@ -129,49 +134,54 @@
                     <div class="menu-outer">
                         <!-- STARTERS -->
                         <h1 class="menucard-heading">Starters</h1>
-                        <img src="/Assets/Img/Divider.png">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
+                                <p class="dish-name">Haloumi</p>
                                 <p class="dish-price">$3.99</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Aubergine Salad</p>
+                                <p class="dish-name">Spinach Pie</p>
                                 <p class="dish-price">$5.50</p>
+                            </div>
+                            <p class="dish-description">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
+                        </div>
+                        <!-- MAIN DISHES -->
+                        <h1 class="menucard-heading">Main Dishes</h1>
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
+                        <div class="menu-box">
+                            <div class="dish">
+                                <p class="dish-name">Cornish Mackerel</p>
+                                <p class="dish-price">5.99$</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
-                        <!-- SALADS -->
-                        <h1 class="menucard-heading">Salads</h1>
-                        <img src="/Assets/Img/Divider.png">
-                        <div class="menu-box">
+                        <div class="menu-box special-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
-                            </div>
-                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                               <p class="special-prize">Special</p>
+                            </div>   
                         </div>
                         <div class="menu-box special">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Roast Lamb</p>
+                                <p class="dish-price">$5.50</p>
                             </div>
-                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            <p class="dish-description">.Pureed eggplant, garlic, green pepper and tomato dip.</p>
                         </div>
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Fried Chicken</p>
+                                <p class="dish-price">$5.25</p>
                             </div>
-                            <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+                            <p class="dish-description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
                         </div>
                         <div class="menu-box">
                             <div class="dish">
-                                <p class="dish-name">Tzatsiki</p>
-                                <p class="dish-price">2222</p>
+                                <p class="dish-name">Pastitsio</p>
+                                <p class="dish-price">$5.99</p>
                             </div>
                             <p class="dish-description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
                         </div>
@@ -179,8 +189,18 @@
                 </div>
             </div>
         </section>
-        <section id="reviews"></section>
-        <section id="reservations"></section>
+        <section id="reviews">
+            <div class="review-box">
+                <h2 class="review-header">Guest Reviews</h2>
+                <img src="Assets/Img/Divider_light.png">
+                <p>If you’ve been to one of our restaurants, you’ve seen – <br>and tasted – what keeps our customers coming back for<br> more. Perfect materials and freshly baked food,<br> delicious Lambda cakes, muffins, and gourmet coffees<br> make us hard to resist! Stop in today and check us out! <br> <br>
+                <i class="nyfood">- food inc, New York</i>
+                </p>
+            </div>
+        </section>
+        <section id="reservations">
+        
+        </section>
     </div>
     <footer></footer>
 </body>
