added the final sections and made the site somewhat responsive

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <header class="nav-header">
         <nav>
             <div class="nav-container">
-                <img src="Assets/Img/logo.png" class="logo">
+                <img src="Assets/Img/logo.png" class="logo" alt="Lambda Logo">
                 <ul class="nav-menu">
-                    <li><a class="nav-link" href="#promo">Home</a></li>
-                    <li><a class="nav-link" href="#about">About</a></li>
-                    <li><a class="nav-link" href="#ingredients">Ingredients</a></li>
-                    <li><a class="nav-link" href="#menu">Menu</a></li>                        
-                    <li><a class="nav-link" href="#reviews">Reviews</a></li>
-                    <li><a class="nav-link" href="#reservations">Reservations</a></li>
-                    <li><a href="http://twitter.com"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="http://youtube.com"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="navli"><a class="nav-link" href="#promo">Home</a></li>
+                    <li class="navli"><a class="nav-link" href="#about">About</a></li>
+                    <li class="navli"><a class="nav-link" href="#ingredients">Ingredients</a></li>
+                    <li class="navli"><a class="nav-link" href="#menu">Menu</a></li>                        
+                    <li class="navli"><a class="nav-link" href="#reviews">Reviews</a></li>
+                    <li class="navli"><a class="nav-link" href="#reservations">Reservations</a></li>
+                        <ul class="navsocial">
+                            <li><a class="nav-link" href="http://twitter.com"><i class="fab fa-twitter"></i></a></li>
+                            <li><a class="nav-link" href="http://youtube.com"><i class="fab fa-youtube"></i></a></li>
+                            <li><a class="nav-link" href="http://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                        </ul>
                 </ul>
             </div>
         </nav>
@@ -42,7 +44,7 @@
             <div class="about-container">
                 <div class="about-food">
                     <h2 class="about-header">Just the right food</h2>
-                    <img src="Assets/Img/Divider.png">
+                    <img src="Assets/Img/Divider.png" alt="line divider image">
                     <p>If you’ve been to one of our restaurants, you’ve seen – and <br> tasted – 
                         what keeps our customers coming back for more. <br>Perfect materials and 
                         freshly baked food, delicious Lambda cakes,<br> muffins, and gourmet coffees 
@@ -52,14 +54,14 @@
                     <img src="Assets/Img/cook.png" alt="Cooking food" class="foodimg">
                 </div>
                 <div class="about-img-container">
-                    <img src="/Assets/Img/dish.png">
+                    <img src="/Assets/Img/dish.png" alt="plate with food">
                 </div>
             </div>
         </section>
         <section id="ingredients">
             <div class="ingredients-box">
                 <h2 class="ingredients-header">Fine ingredients</h2>
-                <img src="Assets/Img/Divider_light.png">
+                <img src="Assets/Img/Divider_light.png" alt="line divider image">
                 <p>If you’ve been to one of our restaurants, you’ve seen – and<br> tasted – what keeps our customers coming back for more.<br> Perfect materials and freshly baked food, delicious Lambda<br> cakes, muffins, and gourmet coffees make us hard to resist!<br> Stop in today and check us out!
                 </p>
                 <div class="ingredients-imgbox">
@@ -77,7 +79,7 @@
                     <div class="menu-outer">
                         <!-- APPETISERS -->
                         <h1 class="menucard-heading">Appetisers</h1>
-                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider" alt="line divider image">
                         <div class="menu-box">
                             <div class="dish">
                                 <p class="dish-name">Tzatsiki</p>
@@ -101,7 +103,7 @@
                         </div>
                         <!-- SALADS -->
                         <h1 class="menucard-heading">Salads</h1>
-                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider" alt="line divider image">
                         <div class="menu-box">
                             <div class="dish">
                                 <p class="dish-name">Olive Special</p>
@@ -134,7 +136,7 @@
                     <div class="menu-outer">
                         <!-- STARTERS -->
                         <h1 class="menucard-heading">Starters</h1>
-                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider" alt="line divider image">
                         <div class="menu-box">
                             <div class="dish">
                                 <p class="dish-name">Haloumi</p>
@@ -151,7 +153,7 @@
                         </div>
                         <!-- MAIN DISHES -->
                         <h1 class="menucard-heading">Main Dishes</h1>
-                        <img src="/Assets/Img/Divider.png" class="menucard-divider">
+                        <img src="/Assets/Img/Divider.png" class="menucard-divider" alt="line divider image">
                         <div class="menu-box">
                             <div class="dish">
                                 <p class="dish-name">Cornish Mackerel</p>
@@ -192,17 +194,78 @@
         <section id="reviews">
             <div class="review-box">
                 <h2 class="review-header">Guest Reviews</h2>
-                <img src="Assets/Img/Divider_light.png">
+                <img src="Assets/Img/Divider_light.png" alt="line divider image">
                 <p>If you’ve been to one of our restaurants, you’ve seen – <br>and tasted – what keeps our customers coming back for<br> more. Perfect materials and freshly baked food,<br> delicious Lambda cakes, muffins, and gourmet coffees<br> make us hard to resist! Stop in today and check us out! <br> <br>
                 <i class="nyfood">- food inc, New York</i>
                 </p>
             </div>
         </section>
         <section id="reservations">
-        
+            <div class="containerbox">
+                <div class="left-container">
+                    <div class="desertimg-container">
+                        <img src="Assets/Img/desert2.jpeg" alt="desertimage two" class="desertimg">
+                        <img src="Assets/Img/desert1.jpeg" alt="desertimage one" class="desertimg">
+                    </div>
+                </div>
+                <div class="right-container">
+                    <div class="reservation-text">
+                    <h2 class="reserve-header">Just the right food</h2>
+                    <img src="Assets/Img/Divider.png" alt="line divider image">
+                    <p>If you’ve been to one of our restaurants, you’ve seen – and <br> tasted – 
+                        what keeps our customers coming back for more. <br>Perfect materials and 
+                        freshly baked food.
+                        <br>
+                        <br>
+                        Delicious Lambda cakes, muffins, and gourmet coffees make<br> us hard to resist!<br>
+                        Stop in today and check us out! Perfect <br> materials and freshly baked food.
+                    </p>
+                    </div>
+                    <div class="form-container">
+                        <form class="reserve-form">
+                            <div class="outer-form">
+                                <div class="form-left">
+                                    <label for="name">Name</label>
+                                    <input type="text" name="name" placeholder="your name *" required>
+                                    <label for="date">Date</label>
+                                    <input type="date" name="Date" placeholder="date *" required>
+                                </div>
+                                <div class="form-right">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" placeholder="your email *" required>
+                                    <label for="party number" >Party number</label>
+                                    <input type="number" name="party number" placeholder="party number">
+                                </div>
+                            </div>
+                            <div class="input"><button>Book now!</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h2 class="footer-header">About us</h2>
+                <img src="Assets/Img/Divider_light.png" alt="line divider image">
+                <p>Lambda's new and expanded Chelsea location<br> represents a truly authentic Greek patisserie,<br> featuring breakfasts of fresh croissants and<br> steaming bowls of café.<br>
+Lamda the best restaurant in town</p>
+            </div>
+            <div class="footer-column">
+                <h2 class="footer-header">Opening Hours</h2>
+                <img src="Assets/Img/Divider_light.png" alt="line divider image">
+                <p><strong>Mon-Thu:</strong> 7:00am-8:00pm</p>
+                <p><strong>Fri-Sun:</strong> 7:00am-10:00pm</p>
+            </div>
+            <div class="footer-column">
+                <h2 class="footer-header">Our Location</h2>
+                <img src="Assets/Img/Divider_light.png" alt="line divider image">
+                <p><strong>19th Paradise Street Sitia</strong></p>
+                <p><strong>128 Meserole Avenue</strong></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
